--- a/app/src/main/res/layout/activity_f1_fridge.xml
+++ b/app/src/main/res/layout/activity_f1_fridge.xml
@@ -19,6 +19,9 @@
         android:numColumns="auto_fit"
         android:background="@color/alpha">
     </GridView>
-
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/tempImage"/>
 
 </LinearLayout>
