--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,8 @@
     <color name="alpha">#00000000</color>
     <color name="gray">#D5D5D5</color>
     <color name="tabcolor">#1ABC9C</color>
+    <color name="freeze">#5853EB</color>
+    <color name="cold">#61DBF0</color>
+    <color name="out">#E1FF36</color>
 
 </resources>
