--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="내용물 정렬 방법">
@@ -29,7 +28,7 @@
         android:title="즐겨찾기 관리"></item>
     <item
         android:id="@+id/login"
-        android:title="로그인"></item>
+        android:title="로그인을 해주세요"></item>
     <item
         android:id="@+id/logout"
         android:title="로그아웃"></item>
