--- a/app/src/main/res/layout/activity_f3_recipe.xml
+++ b/app/src/main/res/layout/activity_f3_recipe.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.kgm13.requestfridge.F3_Recipe">
 
     <ListView
-        android:id="@+id/recipteListview"
+        android:id="@+id/recipeListview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
