login 연동 임시 저장

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,4 +32,7 @@
     <item
         android:id="@+id/logout"
         android:title="로그아웃"></item>
+    <item
+        android:id="@+id/share"
+        android:title="다른 사람과 같이 써봐요"></item>
 </menu>
