--- a/app/src/main/res/layout/activity_dialog_shareconfirm.xml
+++ b/app/src/main/res/layout/activity_dialog_shareconfirm.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kgm13.requestfridge.Share_dialog"
     android:background="@color/white"
+    tools:context="com.example.kgm13.requestfridge.Dialog_Shareconfirm"
     android:orientation="vertical">
 
-
     <RelativeLayout
-        android:id="@+id/relative_share"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
@@ -18,19 +16,8 @@
         android:background="@color/white">
 
 
-        <Button
-            android:id="@+id/share_cancel_top"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:background="@drawable/cancel" />
-
-        <!--물품에 대한 layout-->
         <LinearLayout
-            android:id="@+id/firstlayout_share"
+            android:id="@+id/firstlayout_shareconfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -47,13 +34,13 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
-                    android:text="공유하고 싶은 아이디를 입력해주세요"
+                    android:text="공유 요청입니다!"
                     android:textColor="@color/tabcolor"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/share_id"
+                <TextView
+                    android:id="@+id/shareconfirm_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/Black" />
@@ -64,21 +51,21 @@
 
     </RelativeLayout>
     <LinearLayout
-        android:id="@+id/linelayout_share"
+        android:id="@+id/linelayout_shareconfirm"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:orientation="vertical"
-        android:layout_below="@+id/firstlayout_share"
+        android:layout_below="@+id/firstlayout_shareconfirm"
         android:background="@color/lighBlack"
         ></LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/linelayout_share"
+        android:layout_below="@id/linelayout_shareconfirm"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/share_cancel"
+            android:id="@+id/shareconfirm_cancel"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -88,12 +75,12 @@
             android:background="@color/alpha"/>
 
         <Button
-            android:id="@+id/share_confirm"
+            android:id="@+id/shareconfirm_accept"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="fitCenter"
-            android:text="공유 할래요"
+            android:text="수락 할래요"
             android:textColor="@color/Black"
             android:background="@color/alpha"/>
     </LinearLayout>
