--- a/app/src/main/res/layout/activity_f1_fridge.xml
+++ b/app/src/main/res/layout/activity_f1_fridge.xml
@@ -5,23 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context="com.example.kgm13.requestfridge.F1_Fridge">
+    tools:context="com.example.kgm13.requestfridge.F1_Fridge"
+    android:orientation="horizontal">
 
-    <GridView
-        android:id="@+id/grid"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:columnWidth="100dp"
-        android:horizontalSpacing="10dp"
-        android:verticalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:background="@color/alpha">
-    </GridView>
+        android:layout_height="wrap_content">
+
+        <GridView
+            android:id="@+id/grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/alpha"
+            android:columnWidth="100dp"
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="10dp"></GridView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
     <ImageView
+        android:id="@+id/tempImage"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/tempImage"/>
+        android:layout_height="0dp" />
 
 </LinearLayout>
