--- a/app/src/main/res/layout/activity_f3_recipeview.xml
+++ b/app/src/main/res/layout/activity_f3_recipeview.xml
@@ -2,27 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/recipeimage"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_gravity="center"
-        android:layout_weight="0"
-        android:scaleType="centerInside"/>
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_weight="1">
+        android:layout_height="65dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/recipeimage"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="left"
+            android:layout_weight="0"
+            android:scaleType="centerInside"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight = "1"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
             android:id="@+id/recipename"
-            android:textAlignment="center"/>
+            android:textAlignment="center"/></LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/recipeinfo"
-            android:textAlignment="center"/></LinearLayout>
+            android:textStyle="bold"
+            android:textAlignment="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id = "@+id/recipedetail"/>
 </LinearLayout>
