--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,27 +2,20 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="내용물 정렬 방법">
-        <menu>
-            <item
-                android:id="@+id/nav_sort_spinner"
-                android:title=""
-                app:actionLayout="@layout/spinner"></item>
-        </menu>
-    </item>
+
     <item
         android:id="@+id/alarm_switch"
         android:actionViewClass="android.support.v7.widget.SwitchCompat"
-        android:title="유통기한 알림"
+        android:title="냉장고 관리 알림"
         app:actionLayout="@layout/menu_switch"
         app:showAsAction="always">
-        <menu>
-            <item
-                android:id="@+id/nav_alarm_spinner"
-                android:title=""
-                app:actionLayout="@layout/spinner"></item>
-        </menu>
     </item>
+    <TimePicker
+    android:id="@+id/nav_time_picker"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"></TimePicker>
+
     <item
         android:id="@+id/book_mark"
         android:title="즐겨찾기 관리"></item>
