--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="red">#FF0000</color>
     <color name="yellow">#FFE400</color>
     <color name="blue">#0054FF</color>
+    <color name="orange">#FF5E00</color>
 
 </resources>
