--- a/app/src/main/res/layout/activity_f1_fridge.xml
+++ b/app/src/main/res/layout/activity_f1_fridge.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fridge_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/white"
     tools:context="com.example.kgm13.requestfridge.F1_Fridge"
     android:orientation="horizontal">
 
