--- a/app/src/main/res/layout/activity_f2_list.xml
+++ b/app/src/main/res/layout/activity_f2_list.xml
@@ -6,44 +6,78 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context="com.example.kgm13.requestfridge.F2_List">
+    tools:context="com.example.kgm13.requestfridge.F2_List"
+    android:weightSum="15">
 
-    <!--<ScrollView-->
-        <!--android:id="@+id/f2_scroll"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:visibility="visible"-->
-        <!--android:scrollbars="none"-->
-        <!--android:fillViewport="true"> -->
-
-        <ListView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:orientation="vertical"
+        android:layout_weight="4.5">
+        <TextView
             android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#666666"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:text="냉동"
+            android:textSize="15dp"/>
+        <ListView
             android:id="@+id/f2_list_listview_freeze"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:divider="#E6E6E6"
             android:dividerHeight="2dp">
         </ListView>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:orientation="vertical"
+        android:layout_weight="4.5">
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#666666"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:text="냉장"
+            android:textSize="15dp"/>
         <ListView
-            android:layout_marginTop="30dp"
             android:id="@+id/f2_list_listview_cold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:divider="#E6E6E6"
             android:dividerHeight="2dp">
         </ListView>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:orientation="vertical"
+        android:layout_weight="4.5">
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#666666"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:text="실온"
+            android:textSize="15dp"/>
         <ListView
-            android:layout_marginTop="30dp"
             android:id="@+id/f2_list_listview_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:divider="#E6E6E6"
             android:dividerHeight="2dp">
         </ListView>
-    <!--</ScrollView>-->
+    </LinearLayout>
+
 
 
 </LinearLayout>
